Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/Nonlinear.out
Nonlinear.java:35:36: compiler.err.prob.found.req: (compiler.misc.incompatible.eq.bounds: A, B,A)
Nonlinear.java:71:45: compiler.err.prob.found.req: (compiler.misc.incompatible.eq.bounds: A, B,A,A)
2 errors
